<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.activity.LoginActivity">

    <include android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <LinearLayout
        android:layout_below="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_activity_top_linear_layout_height"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/app_icon_image_width"
                android:layout_height="@dimen/app_icon_image_height"
                android:src="@drawable/flower"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/app_icon_margin_top"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:textCursorDrawable="@null"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/register_username_edittext"
                android:layout_width="@dimen/username_edittext_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/username_edittext_margin_top"
                android:background="@color/colorAccent"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:hint="@string/username_hint"
                android:padding="@dimen/drawable_padding"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorFadedBlack" />

            <EditText

                android:textCursorDrawable="@null"
                android:maxLines="1"
                android:id="@+id/register_password_edittext"
                android:layout_width="@dimen/password_edittext_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:background="@color/colorAccent"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="@dimen/drawable_padding"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorFadedBlack" />

            <EditText
                android:textCursorDrawable="@null"
                android:maxLines="1"
                android:id="@+id/register_confirm_password_edittext"
                android:layout_width="@dimen/confirm_password_edittext_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:background="@color/colorAccent"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="@dimen/drawable_padding"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorFadedBlack" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:background="@color/colorPrimary"
                android:text="@string/register_btn"
                android:textSize="@dimen/register_btn_textSize" />

            <TextView
                android:id="@+id/sign_in_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/register_textview_margin_top"
                android:text="@string/sign_in_suggestion"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sign_up_textview" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>