<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.activity.LoginActivity">

    <include android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <LinearLayout
        android:layout_below="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/login_activity_linear_layout_top_height"
               android:background="@color/colorAccent"
               android:orientation="vertical">

               <ImageView
                   android:layout_width="@dimen/app_icon_image_width"
                   android:layout_height="@dimen/app_icon_image_height"
                   android:src="@drawable/flower"
                   android:layout_gravity="center"
                   android:layout_marginTop="@dimen/app_icon_margin_top"
                   />
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">

               <EditText
                   android:textCursorDrawable="@null"
                   android:inputType="text"
                   android:maxLines="1"
                   android:id="@+id/login_username_edittext"
                   android:layout_width="@dimen/username_edittext_width"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_marginTop="@dimen/login_username_edittext_margin_top"
                   android:background="@color/colorAccent"
                   android:drawablePadding="@dimen/drawable_padding"
                   android:drawableStart="@drawable/ic_person_black_24dp"
                   android:hint="@string/username_hint"
                   android:padding="@dimen/drawable_padding"
                   android:textColor="@color/colorBlack"
                   android:textColorHint="@color/colorFadedBlack" />

               <EditText

                   android:textCursorDrawable="@null"
                   android:maxLines="1"
                   android:id="@+id/login_password_edittext"
                   android:layout_width="@dimen/password_edittext_width"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_marginTop="@dimen/edittext_margin_top"
                   android:background="@color/colorAccent"
                   android:drawablePadding="@dimen/drawable_padding"
                   android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                   android:hint="@string/password_hint"
                   android:inputType="textPassword"
                   android:padding="@dimen/drawable_padding"
                   android:textColor="@color/colorBlack"
                   android:textColorHint="@color/colorFadedBlack" />

               <Button
                   android:id="@+id/login_btn"
                   android:layout_width="@dimen/btn_width"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_marginTop="@dimen/login_btn_margin_top"
                   android:background="@color/colorPrimary"
                   android:text="@string/login"
                   android:textSize="@dimen/login_btn_textsize" />

               <TextView
                   android:id="@+id/sign_up_textview"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_marginTop="@dimen/login_textview_margin_top"
                   android:text="@string/sign_up_suggestion"
                   android:textColor="@color/colorPrimary"
                   android:textSize="19dp" />
           </LinearLayout>

    </LinearLayout>

</RelativeLayout>
